# OpenMicroView

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: pylint.yml
install/: apt-requirements.list  install.sh  requirements.txt
install/pip/: common.txt  requirements.dev  requirements.txt
sources/open_micro_view/: app.py  copy_manager.py  image_browser.py  microscope.py  microscope_camera.py  microscope_light.py  settings.py  timelapse.py  timelapse_loader.py  utils.py
sources/open_micro_view/assets/: icons.py  theme.py
src/open_micro_view/: __init__.py  app.py  copy_manager.py  image_browser.py  microscope.py  microscope_camera.py  microscope_light.py  settings.py  timelapse.py  timelapse_loader.py  utils.py
src/open_micro_view/assets/: icons.py  theme.py
