[project]
name = "openmicroview"
version = "1.0.1"
description = "GUI for the open source, Raspberry Pi based OpenMicroView Microscope"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
        { name="V. Salvadori" }
    ]

maintainers = [
  { name = "Space Biology Group" }
]

requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "imutils",
    "ttkthemes",
    "Pillow",
    "picamera",
    "rpi_ws281x",
    "adafruit-circuitpython-neopixel",
    "adafruit-blinka"
]

keywords = ['raspberrypi', 'microscope']

[project.urls]
Homepage = "https://github.com/Space-Biology-Group/OpenMicroView"
Issues = "https://github.com/Space-Biology-Group/OpenMicroView/issues"

[tool.pyright]
reportMissingModuleSource = "information"
reportMissingImports = "information"

[tool.pylint]

disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "import-error",
    "unspecified-encoding",
    "superfluous-parens"
]
suggestion-mode="yes"
py-version = "3.7.0"
max-line-length=110
